--- a/CSS/allfood.css
+++ b/CSS/allfood.css
@@ -116,9 +116,7 @@ form:hover .fa {
   justify-content: space-around;
   margin-bottom: 20px;
 }
-#border {
 
-}
 .card {
   width: 450px;
   height: 450px;
@@ -204,13 +202,17 @@ form:hover .fa {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
+.dialog{
+  max-height: 550px;
+  overflow-y: auto;
+}
 #detail{
   margin: 0;
   margin-left: 100px;
   border-radius: 20px;
   width: fit-content;
-  background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
-  background-blend-mode: multiply,multiply;
+  font-family: co;
+  background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
 }
 /* Caption of Modal Image */
 #caption {
@@ -219,10 +221,12 @@ form:hover .fa {
   display: block;
   width: 80%;
   max-width: 500px;
-  text-align: left;
-  color: #ffffff;
+  text-align: center;
+  color: black;
   padding-left: 10px;
   padding-right: 10px;
+  font-family: "Patrick Hand";
+  font-size: 50px;
 }
 #info>p{
   margin-left: 10px;
@@ -232,6 +236,8 @@ form:hover .fa {
   word-wrap: break-word;
 }
 .row>img{
+  width: 550px;
+  height: 550px;
   border-radius: 20px 0 0 20px;
 }
 /* Add Animation */
