--- a/CSS/index.css
+++ b/CSS/index.css
@@ -34,6 +34,7 @@ body {
   text-shadow: 0 10px 10px black;
   font-size: 2em;
   font-weight: bold;
+  font-family: "Sriracha";
 }
 .content p:last-child {
   position: relative;
@@ -146,6 +147,17 @@ body {
   border-radius: 5px;
   box-shadow: 5px 5px 10px black;
 }
+#btnDetail{
+  text-decoration: unset;
+  background: #fff;
+  color: #000;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 5px 5px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px black;
+}
 /* ---------------------------------------------------------------------------------------------------------- */
 /* navbar */
 .navbar{
@@ -184,3 +196,89 @@ body {
   font-weight: bolder;
 }
 /* --------------------------------------------------------------------------------------------------------- */
+/* modal */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 50px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+.dialog{
+  max-height: 550px;
+  overflow-y: auto;
+}
+#detail{
+  margin: 0;
+  margin-left: 150px;
+  border-radius: 20px;
+  width: fit-content;
+  background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
+}
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  margin-top: 20px;
+  display: block;
+  width: 80%;
+  max-width: 500px;
+  text-align: center;
+  color: black;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-family: "Patrick Hand";
+  font-size: 50px;
+}
+#info>p{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+#caption>p{
+  word-wrap: break-word;
+}
+.row>img{
+  width: 550px;
+  height: 550px;
+  border-radius: 20px 0 0 20px;
+}
+/* Add Animation */
+#caption {  
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)} 
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #ffffff;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
