--- a/CSS/index.css
+++ b/CSS/index.css
@@ -118,7 +118,7 @@ body {
 }
 .card:hover .info {
   opacity: 1;
-  transform: translate(0px,-30px);
+  transform: translate(0px, -30px);
 }
 
 .info > h3 {
@@ -147,7 +147,7 @@ body {
   border-radius: 5px;
   box-shadow: 5px 5px 10px black;
 }
-#btnDetail{
+#btnDetail {
   text-decoration: unset;
   background: #fff;
   color: #000;
@@ -158,11 +158,22 @@ body {
   border-radius: 5px;
   box-shadow: 5px 5px 10px black;
 }
+
 /* ---------------------------------------------------------------------------------------------------------- */
 /* navbar */
-.navbar{
-  background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
-  background-blend-mode: multiply,multiply;
+.navbar {
+  background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.15) 0%,
+      rgba(0, 0, 0, 0.15) 100%
+    ),
+    radial-gradient(
+        at top center,
+        rgba(255, 255, 255, 0.4) 0%,
+        rgba(0, 0, 0, 0.4) 120%
+      )
+      #989898;
+  background-blend-mode: multiply, multiply;
 }
 .navbar-nav li a {
   transition: all 0.5s ease-in;
@@ -192,7 +203,7 @@ body {
     padding: 10px 20px !important;
   }
 }
-.nav-link{
+.nav-link {
   font-weight: bolder;
 }
 /* --------------------------------------------------------------------------------------------------------- */
@@ -207,19 +218,24 @@ body {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
 }
-.dialog{
+.dialog {
   max-height: 550px;
   overflow-y: auto;
 }
-#detail{
+#detail {
   margin: 0;
   margin-left: 150px;
   border-radius: 20px;
   width: fit-content;
-  background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
+  background-image: linear-gradient(
+    to top,
+    #c4c5c7 0%,
+    #dcdddf 52%,
+    #ebebeb 100%
+  );
 }
 /* Caption of Modal Image */
 #caption {
@@ -235,20 +251,24 @@ body {
   font-family: "Patrick Hand";
   font-size: 50px;
 }
-#info>p{
+#info > p {
   margin-left: 10px;
   margin-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-family: Patrick Hand;
+  font-size: 21px;
 }
-#caption>p{
+#caption > p {
   word-wrap: break-word;
 }
-.row>img{
+.row > img {
   width: 550px;
   height: 550px;
   border-radius: 20px 0 0 20px;
 }
 /* Add Animation */
-#caption {  
+#caption {
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
@@ -256,13 +276,21 @@ body {
 }
 
 @-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)} 
-  to {-webkit-transform:scale(1)}
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
 }
 
 @keyframes zoom {
-  from {transform:scale(0)} 
-  to {transform:scale(1)}
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 /* The Close Button */
